--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,13 @@ DerivedData/
 # NB: slash on the end, so we only remove the FOLDER, not any files that were badly named "build"
 build/
 
+bin/
+
 # Generated documentation folders.
-latex/
-html/
 doxygen/
+html/
+latex/
+man/
 
 #####
 # Xcode private settings (window sizes, bookmarks, breakpoints, custom executables, smart groups)
